# voxelizer

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  simplecloudreader.cpp  simplecloudreader.h  voxelgrid.cpp  voxelgrid.h
